on update kata stars check if user is a participant
